<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:contentDescription="@string/business_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/kanch" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:text="@string/app_name"
        android:textColor="@color/business"
        android:textFontWeight="bold"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/store_phone"
            android:scaleType="centerCrop"
            android:src="@drawable/bigphone" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/business_phone"
            android:textColor="@color/business"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/store_hours"
            android:scaleType="centerCrop"
            android:src="@drawable/hourglass" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/monday"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monday"
                    android:textColor="@color/business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/weekday_hours"
                    android:textColor="@color/business" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tuesday"
                    android:textColor="@color/business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/weekday_hours"
                    android:textColor="@color/business" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wednesday"
                    android:textColor="@color/business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/weekday_hours"
                    android:textColor="@color/business" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/thursday"
                    android:textColor="@color/business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/weekday_hours"
                    android:textColor="@color/business" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/friday"
                    android:textColor="@color/business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/weekday_hours"
                    android:textColor="@color/business" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/saturday"
                    android:textColor="@color/business" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/weekday_hours"
                    android:textColor="@color/business" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sunday" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="3dp"
                    android:text="@string/sunday_hours"
                    android:textColor="@color/sundayHours" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/store_location"
            android:scaleType="centerCrop"
            android:src="@drawable/loca" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/address"
            android:textColor="@color/business"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>